--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -123,6 +123,141 @@
   <data name="FIELD_EMAIL" xml:space="preserve">
     <value>E-mail</value>
   </data>
+  <data name="GIZ_ADDRESS" xml:space="preserve">
+    <value>Address</value>
+  </data>
+  <data name="GIZ_ADD_TO_CART" xml:space="preserve">
+    <value>Add to cart</value>
+  </data>
+  <data name="GIZ_ALREADY_A_MEMBER" xml:space="preserve">
+    <value>Already a member?</value>
+  </data>
+  <data name="GIZ_BALANCE_IS_HIDDEN" xml:space="preserve">
+    <value>Balance Hidden</value>
+  </data>
+  <data name="GIZ_BIRTH_DATE" xml:space="preserve">
+    <value>Date of birth</value>
+  </data>
+  <data name="GIZ_CONFIRM" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="GIZ_CONFIRM_PASSWORD" xml:space="preserve">
+    <value>Confirm your password</value>
+  </data>
+  <data name="GIZ_CONTINUE" xml:space="preserve">
+    <value>Continue</value>
+  </data>
+  <data name="GIZ_COUNTRY_REGION" xml:space="preserve">
+    <value>Country/Region</value>
+  </data>
+  <data name="GIZ_EMAIL" xml:space="preserve">
+    <value>Email</value>
+  </data>
+  <data name="GIZ_EMAIL_ADDRESS" xml:space="preserve">
+    <value>Email address</value>
+  </data>
+  <data name="GIZ_ENTER_NEW_PASSWORD" xml:space="preserve">
+    <value>Enter new password</value>
+  </data>
+  <data name="GIZ_ENTER_PHONE_NUMBER" xml:space="preserve">
+    <value>Enter the phone number that is linked to your account</value>
+  </data>
+  <data name="GIZ_ENTER_YOUR_CODE" xml:space="preserve">
+    <value>Enter your code</value>
+  </data>
+  <data name="GIZ_FIRST_NAME" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="GIZ_FORGOT_PASSWORD" xml:space="preserve">
+    <value>Forgot Password</value>
+  </data>
+  <data name="GIZ_FORGOT_YOUR_PASSWORD" xml:space="preserve">
+    <value>Forgot you password?</value>
+  </data>
+  <data name="GIZ_GAMES_AND_APPS" xml:space="preserve">
+    <value>Games &amp; Apps</value>
+  </data>
+  <data name="GIZ_GENDER" xml:space="preserve">
+    <value>Gender</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_NO_RESULTS_MESSAGE" xml:space="preserve">
+    <value>We didn't find anything</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_NO_RESULTS_RETRY_MESSAGE" xml:space="preserve">
+    <value>Try different keywords or make sure everything is spelled correctly.</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_SHOW_ALL" xml:space="preserve">
+    <value>See all</value>
+  </data>
+  <data name="GIZ_HOME_PHONE" xml:space="preserve">
+    <value>Home phone</value>
+  </data>
+  <data name="GIZ_LAST_NAME" xml:space="preserve">
+    <value>Last name</value>
+  </data>
+  <data name="GIZ_LAUNCH" xml:space="preserve">
+    <value>Launch</value>
+  </data>
+  <data name="GIZ_NOT_A_MEMBER" xml:space="preserve">
+    <value>Not a member?</value>
+  </data>
+  <data name="GIZ_NO_PRODUCTS_MESSAGE" xml:space="preserve">
+    <value>No products</value>
+  </data>
+  <data name="GIZ_NO_PRODUCTS_RETRY_MESSAGE" xml:space="preserve">
+    <value>Add products to get started</value>
+  </data>
+  <data name="GIZ_OR" xml:space="preserve">
+    <value>Or</value>
+  </data>
+  <data name="GIZ_ORDER_NOTE" xml:space="preserve">
+    <value>Order comments</value>
+  </data>
+  <data name="GIZ_ORDER_NOTE_PLACEHOLDER" xml:space="preserve">
+    <value>Add your note..</value>
+  </data>
+  <data name="GIZ_PASSWORD" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="GIZ_PHONE_NUMBER" xml:space="preserve">
+    <value>Phone number</value>
+  </data>
+  <data name="GIZ_PLACE_ORDER" xml:space="preserve">
+    <value>Place order</value>
+  </data>
+  <data name="GIZ_PLEASE_ENTER_RECOVERY_CODE" xml:space="preserve">
+    <value>Please enter the code from the text message we sent to {0}</value>
+  </data>
+  <data name="GIZ_POST_CODE" xml:space="preserve">
+    <value>Post code</value>
+  </data>
+  <data name="GIZ_QR_CODE" xml:space="preserve">
+    <value>QR code</value>
+  </data>
+  <data name="GIZ_REPEAT_NEW_PASSWORD" xml:space="preserve">
+    <value>Repeat new password</value>
+  </data>
+  <data name="GIZ_RESET_PASSWORD" xml:space="preserve">
+    <value>Reset password</value>
+  </data>
+  <data name="GIZ_SET_PASSWORD_MESSAGE" xml:space="preserve">
+    <value>Great! Now come up with a new password and you're all set</value>
+  </data>
+  <data name="GIZ_SIGN_IN" xml:space="preserve">
+    <value>Sign in</value>
+  </data>
+  <data name="GIZ_SIGN_UP" xml:space="preserve">
+    <value>Sign Up</value>
+  </data>
+  <data name="GIZ_SIGN_UP_NOW" xml:space="preserve">
+    <value>Sign up now</value>
+  </data>
+  <data name="GIZ_SUBTOTAL" xml:space="preserve">
+    <value>Subtotal</value>
+  </data>
+  <data name="GIZ_USERNAME" xml:space="preserve">
+    <value>Username</value>
+  </data>
   <data name="MODULE_PAGE_APPS_DESCRIPTION" xml:space="preserve">
     <value>Apps page</value>
   </data>
