--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -123,62 +123,131 @@
   <data name="FIELD_EMAIL" xml:space="preserve">
     <value>E-mail</value>
   </data>
-  <data name="GIZ_ADDRESS" xml:space="preserve">
-    <value>Address</value>
+  <data name="GIZ_ACTIVE_APPS_TITLE" xml:space="preserve">
+    <value>Active applications</value>
   </data>
-  <data name="GIZ_ADD_TO_CART" xml:space="preserve">
-    <value>Add to cart</value>
+  <data name="GIZ_APPS_AUTO_START" xml:space="preserve">
+    <value>Autostart</value>
   </data>
-  <data name="GIZ_ALREADY_A_MEMBER" xml:space="preserve">
-    <value>Already a member?</value>
+  <data name="GIZ_APPS_CATEGORY" xml:space="preserve">
+    <value>Category:</value>
   </data>
-  <data name="GIZ_BALANCE_IS_HIDDEN" xml:space="preserve">
-    <value>Balance Hidden</value>
+  <data name="GIZ_APPS_DATE_ADDED" xml:space="preserve">
+    <value>Date Added</value>
   </data>
-  <data name="GIZ_BIRTH_DATE" xml:space="preserve">
-    <value>Date of birth</value>
+  <data name="GIZ_APPS_LAUNCH" xml:space="preserve">
+    <value>Launch</value>
   </data>
-  <data name="GIZ_CONFIRM" xml:space="preserve">
+  <data name="GIZ_APPS_LINKS" xml:space="preserve">
+    <value>Links</value>
+  </data>
+  <data name="GIZ_APPS_LOADING" xml:space="preserve">
+    <value>Loading</value>
+  </data>
+  <data name="GIZ_APPS_MEDIA" xml:space="preserve">
+    <value>Media</value>
+  </data>
+  <data name="GIZ_APPS_PARAMETERS" xml:space="preserve">
+    <value>Parameters:</value>
+  </data>
+  <data name="GIZ_APPS_PERSONAL_FILES" xml:space="preserve">
+    <value>Personal Files</value>
+  </data>
+  <data name="GIZ_APPS_PLAYER_MODE" xml:space="preserve">
+    <value>Player Mode</value>
+  </data>
+  <data name="GIZ_APPS_PUBLISHER" xml:space="preserve">
+    <value>Publisher</value>
+  </data>
+  <data name="GIZ_APPS_RELEASE_DATE" xml:space="preserve">
+    <value>Release Date</value>
+  </data>
+  <data name="GIZ_APPS_REPAIR" xml:space="preserve">
+    <value>Repair</value>
+  </data>
+  <data name="GIZ_APPS_TERMINATE" xml:space="preserve">
+    <value>Terminate</value>
+  </data>
+  <data name="GIZ_GEN_ALL" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="GIZ_GEN_BACK_TO_SHOP" xml:space="preserve">
+    <value>Back to Shop</value>
+  </data>
+  <data name="GIZ_GEN_BALANCE" xml:space="preserve">
+    <value>Balance</value>
+  </data>
+  <data name="GIZ_GEN_CANCEL" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="GIZ_GEN_CONFIRM" xml:space="preserve">
     <value>Confirm</value>
   </data>
-  <data name="GIZ_CONFIRM_PASSWORD" xml:space="preserve">
+  <data name="GIZ_GEN_CONFIRM_PASSWORD" xml:space="preserve">
     <value>Confirm your password</value>
   </data>
-  <data name="GIZ_CONTINUE" xml:space="preserve">
+  <data name="GIZ_GEN_CONTINUE" xml:space="preserve">
     <value>Continue</value>
   </data>
-  <data name="GIZ_COUNTRY_REGION" xml:space="preserve">
-    <value>Country/Region</value>
-  </data>
-  <data name="GIZ_EMAIL" xml:space="preserve">
+  <data name="GIZ_GEN_EMAIL" xml:space="preserve">
     <value>Email</value>
   </data>
-  <data name="GIZ_EMAIL_ADDRESS" xml:space="preserve">
+  <data name="GIZ_GEN_EMAIL_ADDRESS" xml:space="preserve">
     <value>Email address</value>
   </data>
-  <data name="GIZ_ENTER_NEW_PASSWORD" xml:space="preserve">
+  <data name="GIZ_GEN_ENTER_NEW_PASSWORD" xml:space="preserve">
     <value>Enter new password</value>
   </data>
-  <data name="GIZ_ENTER_PHONE_NUMBER" xml:space="preserve">
-    <value>Enter the phone number that is linked to your account</value>
+  <data name="GIZ_GEN_MOBILE_PHONE" xml:space="preserve">
+    <value>Mobile phone</value>
   </data>
-  <data name="GIZ_ENTER_YOUR_CODE" xml:space="preserve">
-    <value>Enter your code</value>
+  <data name="GIZ_GEN_PASSWORD" xml:space="preserve">
+    <value>Password</value>
   </data>
-  <data name="GIZ_FIRST_NAME" xml:space="preserve">
-    <value>First name</value>
+  <data name="GIZ_GEN_PHONE_NUMBER" xml:space="preserve">
+    <value>Phone number</value>
   </data>
-  <data name="GIZ_FORGOT_PASSWORD" xml:space="preserve">
-    <value>Forgot Password</value>
+  <data name="GIZ_GEN_POINTS" xml:space="preserve">
+    <value>Points</value>
   </data>
-  <data name="GIZ_FORGOT_YOUR_PASSWORD" xml:space="preserve">
-    <value>Forgot you password?</value>
+  <data name="GIZ_GEN_POPULAR_ITEMS" xml:space="preserve">
+    <value>Popular items</value>
   </data>
-  <data name="GIZ_GAMES_AND_APPS" xml:space="preserve">
+  <data name="GIZ_GEN_REPEAT_NEW_PASSWORD" xml:space="preserve">
+    <value>Repeat new password</value>
+  </data>
+  <data name="GIZ_GEN_RESULTS_FOR" xml:space="preserve">
+    <value>Results for</value>
+  </data>
+  <data name="GIZ_GEN_SAVE" xml:space="preserve">
+    <value>Save</value>
+  </data>
+  <data name="GIZ_GEN_SAVE_CHANGES" xml:space="preserve">
+    <value>Save Changes</value>
+  </data>
+  <data name="GIZ_GEN_SORT_BY" xml:space="preserve">
+    <value>Sort by:</value>
+  </data>
+  <data name="GIZ_GEN_TIME" xml:space="preserve">
+    <value>Time</value>
+  </data>
+  <data name="GIZ_GEN_UPDATE" xml:space="preserve">
+    <value>Update</value>
+  </data>
+  <data name="GIZ_GEN_USERNAME" xml:space="preserve">
+    <value>Username</value>
+  </data>
+  <data name="GIZ_GEN_VIEW_DETAILS" xml:space="preserve">
+    <value>View details</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_ADD_TO_CART" xml:space="preserve">
+    <value>Add to cart</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_GAMES_AND_APPS" xml:space="preserve">
     <value>Games &amp; Apps</value>
   </data>
-  <data name="GIZ_GENDER" xml:space="preserve">
-    <value>Gender</value>
+  <data name="GIZ_GLOBAL_SEARCH_LAUNCH" xml:space="preserve">
+    <value>Launch</value>
   </data>
   <data name="GIZ_GLOBAL_SEARCH_NO_RESULTS_MESSAGE" xml:space="preserve">
     <value>We didn't find anything</value>
@@ -186,77 +255,245 @@
   <data name="GIZ_GLOBAL_SEARCH_NO_RESULTS_RETRY_MESSAGE" xml:space="preserve">
     <value>Try different keywords or make sure everything is spelled correctly.</value>
   </data>
+  <data name="GIZ_GLOBAL_SEARCH_PLACEHOLDER" xml:space="preserve">
+    <value>Search games, apps, shop</value>
+  </data>
+  <data name="GIZ_GLOBAL_SEARCH_SHOP" xml:space="preserve">
+    <value>Shop</value>
+  </data>
   <data name="GIZ_GLOBAL_SEARCH_SHOW_ALL" xml:space="preserve">
     <value>See all</value>
   </data>
-  <data name="GIZ_HOME_PHONE" xml:space="preserve">
-    <value>Home phone</value>
+  <data name="GIZ_LOGIN_ALREADY_A_MEMBER" xml:space="preserve">
+    <value>Already a member?</value>
   </data>
-  <data name="GIZ_LAST_NAME" xml:space="preserve">
-    <value>Last name</value>
+  <data name="GIZ_LOGIN_FORGOT_YOUR_PASSWORD" xml:space="preserve">
+    <value>Forgot you password?</value>
   </data>
-  <data name="GIZ_LAUNCH" xml:space="preserve">
-    <value>Launch</value>
-  </data>
-  <data name="GIZ_NOT_A_MEMBER" xml:space="preserve">
+  <data name="GIZ_LOGIN_NOT_A_MEMBER" xml:space="preserve">
     <value>Not a member?</value>
   </data>
-  <data name="GIZ_NO_PRODUCTS_MESSAGE" xml:space="preserve">
-    <value>No products</value>
-  </data>
-  <data name="GIZ_NO_PRODUCTS_RETRY_MESSAGE" xml:space="preserve">
-    <value>Add products to get started</value>
-  </data>
-  <data name="GIZ_OR" xml:space="preserve">
+  <data name="GIZ_LOGIN_OR" xml:space="preserve">
     <value>Or</value>
   </data>
-  <data name="GIZ_ORDER_NOTE" xml:space="preserve">
-    <value>Order comments</value>
-  </data>
-  <data name="GIZ_ORDER_NOTE_PLACEHOLDER" xml:space="preserve">
-    <value>Add your note..</value>
-  </data>
-  <data name="GIZ_PASSWORD" xml:space="preserve">
-    <value>Password</value>
-  </data>
-  <data name="GIZ_PHONE_NUMBER" xml:space="preserve">
-    <value>Phone number</value>
-  </data>
-  <data name="GIZ_PLACE_ORDER" xml:space="preserve">
-    <value>Place order</value>
-  </data>
-  <data name="GIZ_PLEASE_ENTER_RECOVERY_CODE" xml:space="preserve">
-    <value>Please enter the code from the text message we sent to {0}</value>
-  </data>
-  <data name="GIZ_POST_CODE" xml:space="preserve">
-    <value>Post code</value>
-  </data>
-  <data name="GIZ_QR_CODE" xml:space="preserve">
+  <data name="GIZ_LOGIN_QR_CODE" xml:space="preserve">
     <value>QR code</value>
   </data>
-  <data name="GIZ_REPEAT_NEW_PASSWORD" xml:space="preserve">
-    <value>Repeat new password</value>
-  </data>
-  <data name="GIZ_RESET_PASSWORD" xml:space="preserve">
-    <value>Reset password</value>
-  </data>
-  <data name="GIZ_SET_PASSWORD_MESSAGE" xml:space="preserve">
-    <value>Great! Now come up with a new password and you're all set</value>
-  </data>
-  <data name="GIZ_SIGN_IN" xml:space="preserve">
+  <data name="GIZ_LOGIN_SIGN_IN_TITLE" xml:space="preserve">
     <value>Sign in</value>
   </data>
-  <data name="GIZ_SIGN_UP" xml:space="preserve">
-    <value>Sign Up</value>
-  </data>
-  <data name="GIZ_SIGN_UP_NOW" xml:space="preserve">
+  <data name="GIZ_LOGIN_SIGN_UP_NOW" xml:space="preserve">
     <value>Sign up now</value>
   </data>
-  <data name="GIZ_SUBTOTAL" xml:space="preserve">
+  <data name="GIZ_MENU_BALANCE_IS_HIDDEN" xml:space="preserve">
+    <value>Balance Hidden</value>
+  </data>
+  <data name="GIZ_NOTIFICATIONS_MARK_ALL_AS_READ" xml:space="preserve">
+    <value>Mark as all read</value>
+  </data>
+  <data name="GIZ_NOTIFICATIONS_MARK_AS_READ" xml:space="preserve">
+    <value>Mark as read</value>
+  </data>
+  <data name="GIZ_NOTIFICATIONS_NO_NEW_NOTIFICATIONS" xml:space="preserve">
+    <value>No new notifications.</value>
+  </data>
+  <data name="GIZ_NOTIFICATIONS_NO_NEW_NOTIFICATIONS_MESSAGE" xml:space="preserve">
+    <value>When something new happens you’ll find it here.</value>
+  </data>
+  <data name="GIZ_NOTIFICATIONS_TITLE" xml:space="preserve">
+    <value>Notifications</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_ENTER_EMAIL" xml:space="preserve">
+    <value>Enter the e-mail that is linked to your account</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_ENTER_PHONE_NUMBER" xml:space="preserve">
+    <value>Enter the phone number that is linked to your account</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_ENTER_YOUR_CODE" xml:space="preserve">
+    <value>Enter your code</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_FORGOT_PASSWORD" xml:space="preserve">
+    <value>Forgot Password</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_PLEASE_ENTER_RECOVERY_CODE" xml:space="preserve">
+    <value>Please enter the code from the text message we sent to {0}</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_RESET_PASSWORD" xml:space="preserve">
+    <value>Reset password</value>
+  </data>
+  <data name="GIZ_PASSWORD_RECOVERY_SET_PASSWORD_MESSAGE" xml:space="preserve">
+    <value>Great! Now come up with a new password and you're all set</value>
+  </data>
+  <data name="GIZ_REGISTRATION_ENTER_YOUR_EMAIL" xml:space="preserve">
+    <value>Enter your email</value>
+  </data>
+  <data name="GIZ_REGISTRATION_ENTER_YOUR_MOBILE_PHONE" xml:space="preserve">
+    <value>Enter your mobile phone</value>
+  </data>
+  <data name="GIZ_REGISTRATION_SIGN_UP_BUTTON" xml:space="preserve">
+    <value>Sign Up</value>
+  </data>
+  <data name="GIZ_REGISTRATION_SIGN_UP_TITLE" xml:space="preserve">
+    <value>Sign Up</value>
+  </data>
+  <data name="GIZ_REGISTRATION_SIGN_ΙΝ" xml:space="preserve">
+    <value>Sign in</value>
+  </data>
+  <data name="GIZ_SHOP_ADD_TO_CART" xml:space="preserve">
+    <value>Add to cart</value>
+  </data>
+  <data name="GIZ_SHOP_CHECKOUT_COMPLETE_MESSAGE" xml:space="preserve">
+    <value>Thanks for you order!</value>
+  </data>
+  <data name="GIZ_SHOP_CHECKOUT_COMPLETE_NOTE" xml:space="preserve">
+    <value>Note: You can see all your current orders under My Profile &gt; Purchased</value>
+  </data>
+  <data name="GIZ_SHOP_CHECKOUT_MESSAGE" xml:space="preserve">
+    <value>By selecting Place order, you accept the Gizmo Customer Agreement and privacy statement and represent that you have the authority to do so.</value>
+  </data>
+  <data name="GIZ_SHOP_CHECKOUT_TITLE" xml:space="preserve">
+    <value>Checkout</value>
+  </data>
+  <data name="GIZ_SHOP_EARNED_POINTS" xml:space="preserve">
+    <value>Earned points</value>
+  </data>
+  <data name="GIZ_SHOP_NO_PRODUCTS_MESSAGE" xml:space="preserve">
+    <value>No products</value>
+  </data>
+  <data name="GIZ_SHOP_NO_PRODUCTS_RETRY_MESSAGE" xml:space="preserve">
+    <value>Add products to get started</value>
+  </data>
+  <data name="GIZ_SHOP_ORDER_NOTE" xml:space="preserve">
+    <value>Order comments</value>
+  </data>
+  <data name="GIZ_SHOP_ORDER_NOTE_PLACEHOLDER" xml:space="preserve">
+    <value>Add your note..</value>
+  </data>
+  <data name="GIZ_SHOP_ORDER_TITLE" xml:space="preserve">
+    <value>My order</value>
+  </data>
+  <data name="GIZ_SHOP_PAYMENT_METHOD" xml:space="preserve">
+    <value>Payment method</value>
+  </data>
+  <data name="GIZ_SHOP_PLACE_ORDER" xml:space="preserve">
+    <value>Place order</value>
+  </data>
+  <data name="GIZ_SHOP_PRICE" xml:space="preserve">
+    <value>Price</value>
+  </data>
+  <data name="GIZ_SHOP_PRODUCT_NAME" xml:space="preserve">
+    <value>Product name</value>
+  </data>
+  <data name="GIZ_SHOP_QUANTITY" xml:space="preserve">
+    <value>Quantity</value>
+  </data>
+  <data name="GIZ_SHOP_SUBTOTAL" xml:space="preserve">
     <value>Subtotal</value>
   </data>
-  <data name="GIZ_USERNAME" xml:space="preserve">
-    <value>Username</value>
+  <data name="GIZ_SHOP_TOTAL" xml:space="preserve">
+    <value>Total</value>
+  </data>
+  <data name="GIZ_TOP_UP_OR" xml:space="preserve">
+    <value>Or</value>
+  </data>
+  <data name="GIZ_TOP_UP_OR_ENTER_AMOUNT" xml:space="preserve">
+    <value>Or enter amount*</value>
+  </data>
+  <data name="GIZ_TOP_UP_PAY_FROM_PC" xml:space="preserve">
+    <value>Pay from PC</value>
+  </data>
+  <data name="GIZ_TOP_UP_PLACE_NEXT" xml:space="preserve">
+    <value>Place Next: Payment informaition</value>
+  </data>
+  <data name="GIZ_TOP_UP_QR_CODE" xml:space="preserve">
+    <value>QR-code for payment on phone</value>
+  </data>
+  <data name="GIZ_TOP_UP_QUICK_SELECT" xml:space="preserve">
+    <value>Quick select</value>
+  </data>
+  <data name="GIZ_TOP_UP_TITLE" xml:space="preserve">
+    <value>Top Up</value>
+  </data>
+  <data name="GIZ_TOP_UP_TO_BE_PAID" xml:space="preserve">
+    <value>To be paid:</value>
+  </data>
+  <data name="GIZ_TOP_UP_WILL_BE_CREDITED" xml:space="preserve">
+    <value>will be credited to your Account balance</value>
+  </data>
+  <data name="GIZ_USER_ADDITIONAL_INFORMATION" xml:space="preserve">
+    <value>Additional Information</value>
+  </data>
+  <data name="GIZ_USER_ADDRESS" xml:space="preserve">
+    <value>Address</value>
+  </data>
+  <data name="GIZ_USER_AVAILABLE_ITEMS" xml:space="preserve">
+    <value>Available items</value>
+  </data>
+  <data name="GIZ_USER_BASIC_INFORMATION" xml:space="preserve">
+    <value>Basic information</value>
+  </data>
+  <data name="GIZ_USER_BIRTH_DATE" xml:space="preserve">
+    <value>Date of birth</value>
+  </data>
+  <data name="GIZ_USER_CHANGE_PASSWORD" xml:space="preserve">
+    <value>Change password</value>
+  </data>
+  <data name="GIZ_USER_COUNTRY_REGION" xml:space="preserve">
+    <value>Country/Region</value>
+  </data>
+  <data name="GIZ_USER_DETAILS" xml:space="preserve">
+    <value>User details</value>
+  </data>
+  <data name="GIZ_USER_FIRST_NAME" xml:space="preserve">
+    <value>First name</value>
+  </data>
+  <data name="GIZ_USER_GENDER" xml:space="preserve">
+    <value>Gender</value>
+  </data>
+  <data name="GIZ_USER_HOME_PHONE" xml:space="preserve">
+    <value>Home phone</value>
+  </data>
+  <data name="GIZ_USER_LAST_NAME" xml:space="preserve">
+    <value>Last name</value>
+  </data>
+  <data name="GIZ_USER_MAIL_AND_PHONE_NUMBERS" xml:space="preserve">
+    <value>Mail and phone numbers</value>
+  </data>
+  <data name="GIZ_USER_MENU_HELP" xml:space="preserve">
+    <value>Help</value>
+  </data>
+  <data name="GIZ_USER_MENU_LOCK_PC" xml:space="preserve">
+    <value>Lock PC</value>
+  </data>
+  <data name="GIZ_USER_MENU_LOGOUT" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="GIZ_USER_MENU_PROFILE" xml:space="preserve">
+    <value>My profile</value>
+  </data>
+  <data name="GIZ_USER_MENU_SETTINGS" xml:space="preserve">
+    <value>Settings</value>
+  </data>
+  <data name="GIZ_USER_MENU_TOP_UP" xml:space="preserve">
+    <value>Top Up</value>
+  </data>
+  <data name="GIZ_USER_PERSONAL_INFORMATION" xml:space="preserve">
+    <value>Personal information</value>
+  </data>
+  <data name="GIZ_USER_POST_CODE" xml:space="preserve">
+    <value>Post code</value>
+  </data>
+  <data name="GIZ_USER_PURCHASES" xml:space="preserve">
+    <value>Purchases</value>
+  </data>
+  <data name="GIZ_USER_SETTINGS_TITLE" xml:space="preserve">
+    <value>Edit User Settings</value>
+  </data>
+  <data name="GIZ_USER_TRANSACTIONS" xml:space="preserve">
+    <value>Transactions</value>
+  </data>
+  <data name="GIZ_USER_USERNAME_MESSAGE" xml:space="preserve">
+    <value>Other users will see your username</value>
   </data>
   <data name="MODULE_PAGE_APPS_DESCRIPTION" xml:space="preserve">
     <value>Apps page</value>
