--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ALL_GAMES_AND_APPS" xml:space="preserve">
+    <value>All games and apps</value>
+  </data>
   <data name="CONFIRMATION_CODE_IS_INVALID" xml:space="preserve">
     <value>The confirmation code is invalid.</value>
   </data>
@@ -126,11 +129,20 @@
   <data name="EMAIL_IS_REQUIRED" xml:space="preserve">
     <value>The e-mail field is required.</value>
   </data>
+  <data name="ENTER_THE_CODE" xml:space="preserve">
+    <value>Enter the code</value>
+  </data>
   <data name="FIELD_BIRTH_DATE" xml:space="preserve">
     <value>Birth Date</value>
   </data>
   <data name="FIELD_EMAIL" xml:space="preserve">
     <value>E-mail</value>
+  </data>
+  <data name="GET_CODE" xml:space="preserve">
+    <value>Get Code</value>
+  </data>
+  <data name="GIN_GEN_SEARCH" xml:space="preserve">
+    <value>Search</value>
   </data>
   <data name="GIZ_ACTIVE_APPS_TITLE" xml:space="preserve">
     <value>Active applications</value>
@@ -267,6 +279,9 @@
   <data name="GIZ_GEN_USERNAME" xml:space="preserve">
     <value>Username</value>
   </data>
+  <data name="GIZ_GEN_VERIFY" xml:space="preserve">
+    <value>Verify</value>
+  </data>
   <data name="GIZ_GEN_VIEW_DETAILS" xml:space="preserve">
     <value>View details</value>
   </data>
@@ -371,6 +386,9 @@
   </data>
   <data name="GIZ_REGISTRATION_ENTER_YOUR_MOBILE_PHONE" xml:space="preserve">
     <value>Enter your mobile phone</value>
+  </data>
+  <data name="GIZ_REGISTRATION_MOBILE_CONFIRMATION_MESSAGE" xml:space="preserve">
+    <value>Please confirm your country code and enter your phone number to create an account.</value>
   </data>
   <data name="GIZ_REGISTRATION_SIGN_UP_BUTTON" xml:space="preserve">
     <value>Sign Up</value>
@@ -501,6 +519,9 @@
   <data name="GIZ_USER_CHANGE_PASSWORD" xml:space="preserve">
     <value>Change password</value>
   </data>
+  <data name="GIZ_USER_COUNTRY" xml:space="preserve">
+    <value>Country</value>
+  </data>
   <data name="GIZ_USER_COUNTRY_REGION" xml:space="preserve">
     <value>Country/Region</value>
   </data>
@@ -618,14 +639,44 @@
   <data name="PHONE_IS_REQUIRED" xml:space="preserve">
     <value>The phone number field is required.</value>
   </data>
+  <data name="SELECT_SOMETHING" xml:space="preserve">
+    <value>Select something</value>
+  </data>
   <data name="TOP_UP_MINIMUM_AMOUNT_IS" xml:space="preserve">
     <value>Minimum amount is {0}.</value>
   </data>
   <data name="UNSET_STRING_VALUE" xml:space="preserve">
     <value>Unset value</value>
   </data>
+  <data name="UPDATE_NUMBER" xml:space="preserve">
+    <value>Update number</value>
+  </data>
+  <data name="UPDATE_NUMBER_MESSAGE" xml:space="preserve">
+    <value>Enter the number you’d like to use. To make sure this number is yours, will send you a verification code.</value>
+  </data>
+  <data name="UPDATE_NUMBER_SUCCESS_MESSAGE" xml:space="preserve">
+    <value>We just sent you an SMS with a code. Enter it to verify your phone.</value>
+  </data>
   <data name="USERNAME_IS_IN_USE" xml:space="preserve">
     <value>The Username is in use.</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_ENTER_CODE" xml:space="preserve">
+    <value>Enter Code to Continue</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_FORGOT_PIN" xml:space="preserve">
+    <value>Forgot PIN</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_LOCKED_SUBTITLE" xml:space="preserve">
+    <value>Profile Lock is currently on</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_LOCKED_TITLE" xml:space="preserve">
+    <value>Enter you PIN to access this profile</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_SUBTITLE" xml:space="preserve">
+    <value>Lock this profile by creating a 4-digit pin. Memorize or write it down.</value>
+  </data>
+  <data name="USER_LOCK_SCREEN_TITLE" xml:space="preserve">
+    <value>Profile Lock</value>
   </data>
   <data name="VALIDATION_ERROR_INVALID_DATE" xml:space="preserve">
     <value>The {0} field has an incorrect date value.</value>
