--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -852,4 +852,16 @@
   <data name="USER_ONLINE_DEPOSIT_MAXIMUM_AMOUNT_IS" xml:space="preserve">
     <value>Maximum amount is {0}.</value>
   </data>
+  <data name="GIZ_APPS_ALL_ITEMS" xml:space="preserve">
+    <value>All items</value>
+  </data>
+  <data name="GIZ_APPS_NEW_RELEASES" xml:space="preserve">
+    <value>New releases</value>
+  </data>
+  <data name="GIZ_APPS_POPULAR_ITEMS" xml:space="preserve">
+    <value>Popular items</value>
+  </data>
+  <data name="GIZ_APPS_RECENTLY_ADDED" xml:space="preserve">
+    <value>Recently Added</value>
+  </data>
 </root>
