--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -864,4 +864,7 @@
   <data name="GIZ_APPS_RECENTLY_ADDED" xml:space="preserve">
     <value>Recently Added</value>
   </data>
+  <data name="GIZ_GEN_OR" xml:space="preserve">
+    <value>or</value>
+  </data>
 </root>
