--- a/Gizmo.Client.UI.Resources/Properties/Resources.el.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el.resx
@@ -489,7 +489,7 @@
   <data name="GIZ_USER_AVAILABLE_TIME" xml:space="preserve">
     <value>Available time</value>
   </data>
-  <data name="GIZ_USER_BASIC_INFORMATION" xml:space="preserve">
+  <data name="GIZ_USER_BASIC_INFO" xml:space="preserve">
     <value>Basic information</value>
   </data>
   <data name="GIZ_USER_BIRTH_DATE" xml:space="preserve">
