--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -939,4 +939,7 @@
   <data name="GIZ_SHOP_VERIFY_CLEAR_CART" xml:space="preserve">
     <value>Are you sure you want to clear you cart?</value>
   </data>
+  <data name="GIZ_APPS_SHOW_MORE" xml:space="preserve">
+    <value>Show more</value>
+  </data>
 </root>
