--- a/Gizmo.Client.UI.Resources/Properties/Resources.el.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el.resx
@@ -375,7 +375,7 @@
   <data name="GIZ_REGISTRATION_SIGN_UP_TITLE" xml:space="preserve">
     <value>Sign Up</value>
   </data>
-  <data name="GIZ_REGISTRATION_SIGN_ΙΝ" xml:space="preserve">
+  <data name="GIZ_REGISTRATION_SIGN_IN" xml:space="preserve">
     <value>SDFSDFSDF</value>
   </data>
   <data name="GIZ_SHOP_ADD_TO_CART" xml:space="preserve">
