--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1005,4 +1005,7 @@
   <data name="GIZ_PRODUCT_TIME_EXPIRES_AFTER" xml:space="preserve">
     <value>Expires after</value>
   </data>
+  <data name="GIZ_GEN_PIECES_ABBREVIATED" xml:space="preserve">
+    <value>pcs.</value>
+  </data>
 </root>
