--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1020,4 +1020,28 @@
   <data name="GIZ_SHOP_CARD_PURCHASE_DETAILS" xml:space="preserve">
     <value>Purchase details:</value>
   </data>
+  <data name="GIZ_GEN_FROM" xml:space="preserve">
+    <value>From</value>
+  </data>
+  <data name="GIZ_GEN_UNTIL" xml:space="preserve">
+    <value>Until</value>
+  </data>
+  <data name="GIZ_GEN_WARNING" xml:space="preserve">
+    <value>Warning</value>
+  </data>
+  <data name="GIZ_PRODUCT_CURRENTLY_NOT_AVAILABLE" xml:space="preserve">
+    <value>Currently not available.</value>
+  </data>
+  <data name="GIZ_PRODUCT_NOT_AVAILABLE_ANYMORE" xml:space="preserve">
+    <value>Not available anymore.</value>
+  </data>
+  <data name="GIZ_PRODUCT_NOT_YET_AVAILABLE" xml:space="preserve">
+    <value>Not yet available.</value>
+  </data>
+  <data name="GIZ_PRODUCT_TIME_NOT_AVAILABLE_ON_THIS_HOST" xml:space="preserve">
+    <value>Not available on this host.</value>
+  </data>
+  <data name="GIZ_VERIFY_PRODUCT_TIME_CURRENTLY_UNAVAILABLE" xml:space="preserve">
+    <value>You cannot use this product for the moment. Are you sure you want to buy this product?</value>
+  </data>
 </root>
