--- a/Gizmo.Client.UI.Resources/Properties/Resources.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.resx
@@ -1012,7 +1012,7 @@
     <value>Expires</value>
   </data>
   <data name="FN_APP_EXE_FAILURE" xml:space="preserve">
-    <value>Application failed to launch</value>
+    <value>{0} failed to launch :(</value>
   </data>
   <data name="GIZ_SHOP_CARD_BUNDLE_BUNDLE_DESCRIPTION" xml:space="preserve">
     <value>Bundle description:</value>
